--- a/trunk/Obi/Obi/messages.zh-HK.resx
+++ b/trunk/Obi/Obi/messages.zh-HK.resx
@@ -920,7 +920,7 @@
     <value>分節不會被會出</value>
   </data>
   <data name="default_export_dirname" xml:space="preserve">
-    <value>{0}DAISY3 會出</value>
+    <value>{0}DAISY3 Export</value>
   </data>
   <data name="ObiForm_PipelineNotFound" xml:space="preserve">
     <value>未能找到pipeline 腳本位於 {0}。依靠這些腳本的功能可能無法進行。</value>
@@ -1209,7 +1209,7 @@
     <value>未能自動儲存。</value>
   </data>
   <data name="Default_DAISY2_02export_dirname" xml:space="preserve">
-    <value>{0}DAISY 2.02 會出</value>
+    <value>{0}DAISY 2.02 export</value>
   </data>
   <data name="GoToPageOrPhrase_Title" xml:space="preserve">
     <value>到</value>
@@ -2364,7 +2364,7 @@
     <value>你要同時鉤選 "固定內容檢視寬度" 嗎? (建議)</value>
   </data>
   <data name="default_EpubExport_dirname" xml:space="preserve">
-    <value>{0}Epub3 會出</value>
+    <value>{0}Epub3 Export</value>
   </data>
   <data name="progress_EpubValidating" xml:space="preserve">
     <value>Epub 驗證器正在執行，請稍後…</value>
